fix: scrollbar; hardcode warship, chess img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -830,7 +830,7 @@ iframe {
   gap: 30px;
   overflow-x: auto;
   padding-block-end: 30px;
-  justify-content: center;
+  justify-content: flex-start;
   scroll-snap-type: inline mandatory;
 }
 
